# lipl

./: .gitignore  Cargo.toml  README.md  build.sh  default.nix  flake.nix
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 🔲-architecture-request.md
.github/workflows/: release.yml
assets/: tracker.html
assets/img/: logo.xcf
src/: logger.rs  main.rs
