[package]
name = "lipl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
serde = { version = "1.0.189", features = ["derive"] }
urlencoding = "2.1.3"
