[package]
name = "lipl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
lazy_static = "1.4.0"
serde = { version = "1.0.199", features = ["derive"] }
urlencoding = "2.1.3"

[build]
rustflags = ["-C", "prefer-dynamic"]

[build.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
panic = "abort"
overflow-checls = false
debug-assertions = false
codegen-units = 1
